--- a/flaskface/template/Post.html
+++ b/flaskface/template/Post.html
@@ -1,46 +1,86 @@
 {% extends 'Layout.html'%}
 
 {% block content %}
-    <article class="media content-section">
-        <img class="rounded-circle account-img" src="{{ url_for('static', filename='profile_pic/'+ post.author.image_file)}}">
-        <div class="media-body">
-            <div class="article-metadata">
-                <a class="article-title" href="{{ url_for('user.user_posts', username=post.author.username)}}">{{ post.author.username }}</a>
-                <small class="article-title">{{ post.create_at.strftime('%Y-%m-%d')}}</small>
-            </div>
-            {% if post.author== current_user %}
-                <a class="btn btn-info mr-2" data-toggle="modal" data-target="#exampleModal" href="{{ url_for('post.post_update', post_id=post.id)}}">Update</a>
-                <a class="btn btn-danger mr-2" data-toggle="modal" data-target="#deleteModal" href="">Delete</a>
-            {% endif %}
-            <h2><a class="article-title">{{ post.title}}</a></h2>
-            <p class="article-content">{{ post.content }}</p>
+<article class="media content-section">
+    <img class="rounded-circle account-img"
+         src="{{ url_for('static', filename='profile_pic/'+ post.author.image_file)}}">
+    <div class="media-body">
+        <div class="article-metadata">
+            <a class="article-title" href="{{ url_for('user.user_posts', username=post.author.username)}}">{{
+                post.author.username }}</a>
+            <small class="article-title">{{ post.create_at.strftime('%Y-%m-%d')}}</small>
         </div>
-    </article>
+        {% if post.author== current_user %}
+        <a class="btn btn-info mr-2" data-toggle="modal" data-target="#exampleModal"
+           href="{{ url_for('post.post_update', post_id=post.id)}}">Update</a>
+        <a class="btn btn-danger mr-2" data-toggle="modal" data-target="#deleteModal" href="">Delete</a>
+        {% endif %}
+        <h2><a class="article-title">{{ post.title}}</a></h2>
+        <p class="article-content">{{ post.content }}</p>
+        <hr>
+        <form method="post" action="">
+            {{ form.hidden_tag() }}
+            <fieldset class="form-group">
+                <legend>Comments</legend>
+                <div class="form-group">
+                    {% if form.body.errors %}
+                    {{ form.body(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.body.errors %}
+                        <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                    {% else %}
+                    {{ form.body(class="form-control form-control-lg", placeholder="Comment...") }}
+                    {% endif %}
+                </div>
+            </fieldset>
+            <div class="form-group">
+                {{ form.submit(class="btn btn-outline-info") }}
+            </div>
+        </form>
+
+        {% for com in comm %}
+
+        <div id="mydiv" style="background: #3A7734" onmouseover="this.style.background='skyblue';"
+             onmouseout="this.style.background='white';">
+            <a href="">{{ com.user_id }}</a>
+            <h1>{{ com.body }}</h1>
+        </div>
+        {% endfor %}
+
+    </div>
+
+
+    </div>
+</article>
 
 
 <!-- Modal -->
-    <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="deleteModalLabel">Modal title</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    Are you sure want to delete?
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <a class="btn btn-danger" href="{{ url_for('post.post_delete', post_id=post.id)}}">Delete</a>
-                </div>
+<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="deleteModalLabel">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Are you sure want to delete?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <a class="btn btn-danger" href="{{ url_for('post.post_delete', post_id=post.id)}}">Delete</a>
             </div>
         </div>
     </div>
+</div>
 
 <!--ModelDetail-->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
